syntax = "proto3";


package stt_service;


service ProtoTranscribe {
    rpc Transcribe (stream TranscribePost) returns (stream TranscribeResp) {}
}

message TranscribeStreamingConfig {
    string model = 1;
}

message TranscribePost {
    oneof streaming_request {
        TranscribeStreamingConfig config = 1;
        bytes audio = 2;
    }
}

message TranscribeResp {
    string text = 1;
    float start = 2;
    float end = 3;
    bool is_final = 4;
}
